Submited changes from upstream to Mini.

--- a/S5 - Extraer, transformar y cargar datos/S5.TU2/TUTORIAL - Unir bases de datos.ipynb
+++ b/S5 - Extraer, transformar y cargar datos/S5.TU2/TUTORIAL - Unir bases de datos.ipynb
@@ -287,7 +287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Debemos agregar a `df` las columnas de `df2` según coincidencia de índices uno a uno, preservar todas las filas de `df` y solo las filas que coinciden de `df2`."
+    "Debemos agregar a `df` las columnas de `df2` según coincidencia de índices uno a uno, preservando todas solo las filas que coinciden en `df` y `df2`."
    ]
   },
   {
