--- a/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
+++ b/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "hide-input",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/08/02 04:13:41 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "22/09/12 09:54:21 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     },
     {
@@ -154,10 +154,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f909d0779d0>"
+       "<pyspark.sql.session.SparkSession at 0x7fe9499cf490>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "ParallelCollectionRDD[0] at readRDDFromFile at PythonRDD.scala:274"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
        "PythonRDD[1] at RDD at PythonRDD.scala:53"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +474,7 @@
     }
    ],
    "source": [
-    "df_covid_19 = spark.read.option(\"header\",\"true\").csv(\"Archivos/BID-Cornell.csv\")#, index_col = 0)\n",
+    "df_covid_19 = spark.read.option(\"header\",\"true\").csv(\"Archivos/BID-Cornell.csv\")\n",
     "df_covid_19.printSchema()"
    ]
   },
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
        " Row(Nombre='Programa_3', Descargas=50, Lineas_de_codigo=7000, Region='LAS')]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
        " Row(Nombre='Programa_5', Descargas=8000, Lineas_de_codigo=3505, Region='LAN')]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -603,28 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "withColumn() missing 1 required positional argument: 'col'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [39]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwithColumn\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mDescargas\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: withColumn() missing 1 required positional argument: 'col'"
-     ]
-    }
-   ],
-   "source": [
-    "df."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +682,7 @@
        "4  Programa_5       8000              3505    LAN"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,6 +690,384 @@
    "source": [
     "pandas_df = df.toPandas()\n",
     "pandas_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Operaciones y consulta"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "De manera similar a los RDD, podemos operar sobre los registros de un `DataFrame` de Spark con funciones nativas o por medio funciones definidas por el usuario. El método `withColumn` nos permite agregar o reemplazar una columna a un `DataFrame`, poblándola registro a registro. El resultado es un nuevo `DataFrame` que refleja estos cambios.\n",
+    "\n",
+    "```python\n",
+    "df.withColumn(colName:str, col:Column)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El parámetro `colName` permite definir el nombre que tendrá la columna en el nuevo `DataFrame`. El parámetro `col` recibe una expresión en función de las columnas existentes a partir de la cual `pyspark` calcula el valor para cada registro de la columna `colName`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importamos la función `col` para crear objetos a partir de los cuales crear la expresión del parámetro `col`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+---------+----------------+------+----------------+\n",
+      "|    Nombre|Descargas|Lineas_de_codigo|Region|DescargasXLineas|\n",
+      "+----------+---------+----------------+------+----------------+\n",
+      "|Programa_1|     2000|            4500|   LAN|         9000000|\n",
+      "|Programa_2|     3401|            7000|   LAS|        23807000|\n",
+      "|Programa_3|       50|            7000|   LAS|          350000|\n",
+      "|Programa_4|     7850|            3300|   USW|        25905000|\n",
+      "|Programa_5|     8000|            3505|   LAN|        28040000|\n",
+      "+----------+---------+----------------+------+----------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import col\n",
+    "nuevo_df = df.withColumn(\"DescargasXLineas\", col(\"Descargas\") * col(\"Lineas_de_codigo\"))\n",
+    "nuevo_df.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Veamos algunas operaciones de `pandas` que tienen un equivalente en `pyspark`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Métodos para imputar faltantes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Método `dropna`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Este método elimina aquellas filas que contengan entradas nulas. \n",
+    "\n",
+    "```python\n",
+    "DataFrame.dropna(how, thresh=0, subset=DataFrame.columns)\n",
+    "```\n",
+    "\n",
+    "* `how`: <br><br>\n",
+    "    * `how = 'any'`: elimina la fila si contiene al menos un faltante.\n",
+    "    * `how = 'all'`: elimina la fila si solo contiene faltantes.<br><br>\n",
+    "\n",
+    "* `thresh`: elimina todas las filas con más datos faltantes que el umbral (de tipo `int`) especificado. <br><br>\n",
+    "\n",
+    "* `subset`: permite seleccionar un subconjunto de columnas sobre el cual aplicar el método."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A continuación, declaramos un `DataFrame` para ejemplificar el uso del método `dropna`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+----+----+----+\n",
+      "|   A|   B|   C|   D|\n",
+      "+----+----+----+----+\n",
+      "|   1|null|null|   2|\n",
+      "|null|null|   1|null|\n",
+      "|null|   0|null|   2|\n",
+      "+----+----+----+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [[1   , None, None, 2   ],\n",
+    "        [None, None, 1   , None],\n",
+    "        [None, 0   , None, 2   ]]\n",
+    "\n",
+    "columns = [\"A\", \"B\", \"C\", \"D\"]\n",
+    "\n",
+    "df_numeros = spark.createDataFrame(data=data, schema=columns)\n",
+    "df_numeros.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Utilizamos el método `dropna` para eliminar aquellas filas que solo contienen datos faltantes en el subconjunto de columnas `A` y `C`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+----+----+----+\n",
+      "|   A|   B|   C|   D|\n",
+      "+----+----+----+----+\n",
+      "|   1|null|null|   2|\n",
+      "|null|null|   1|null|\n",
+      "+----+----+----+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "nuevo_df_numeros = df_numeros.dropna(how=\"all\", subset=[\"A\",\"C\"])\n",
+    "nuevo_df_numeros.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Método `fillna`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "DataFrame.fillna(value=None, method=None, axis=None, inplace=False, limit=0)\n",
+    "```\n",
+    "\n",
+    "* `value`: indica el valor o diccionario de valores para imputar en las entradas nulas.<br><br>\n",
+    "\n",
+    "* `subset`: permite seleccionar un subconjunto de columnas sobre el cual aplicar el método."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vamos a completar los datos del `DataFrame` `df_numeros`, reemplazando cada valor faltante por un valor predeterminado para su respectiva columna."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+---+---+---+\n",
+      "|  A|  B|  C|  D|\n",
+      "+---+---+---+---+\n",
+      "|  1|  0|  1|  2|\n",
+      "|  1|  0|  1|  2|\n",
+      "|  1|  0|  1|  2|\n",
+      "+---+---+---+---+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "nuevo_df_numeros = df_numeros.fillna(value={\"A\": 1, \"B\": 0, \"C\": 1, \"D\": 2})\n",
+    "nuevo_df_numeros.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Métodos para unir tablas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "######  Método `join`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Agrega a un `DataFrame` las columnas de otro según coincidan las columnas especificadas en los dos.\n",
+    "\n",
+    "```python\n",
+    "DataFrame.join(other, on=None, how='inner')\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A continuación una explicación de los parámetros.\n",
+    "\n",
+    "* `other`: el `DataFrame` a unir.<br><br>\n",
+    "\n",
+    "* `on`: permite usar una o varias columnas de los `DataFrame` para encontrar las coincidencias. Las columnas especificadas deben existir en ambos `DataFrame`.<br><br>\n",
+    "\n",
+    "* `how`: es `\"inner\"` por defecto. Puedes consultar los posibles valores en la [documentación](https://spark.apache.org/docs/3.1.1/api/python/reference/api/pyspark.sql.DataFrame.join.html#pyspark.sql.DataFrame.join), aunque por lo general todas las operaciones `join` tienen la misma nomenclatura independiente del programa de manejo de datos. <br><br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Consideremos los siguientes `DataFrame`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+---+\n",
+      "|  A|  B|\n",
+      "+---+---+\n",
+      "|  1|  2|\n",
+      "|  3|  4|\n",
+      "|  1|  3|\n",
+      "+---+---+\n",
+      "\n",
+      "+---+---+---+\n",
+      "|  B|  C|  D|\n",
+      "+---+---+---+\n",
+      "|  3|  2|  4|\n",
+      "|  3|  4|  1|\n",
+      "+---+---+---+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [[1, 2],\n",
+    "        [3, 4],\n",
+    "        [1, 3]]\n",
+    "\n",
+    "columns = [\"A\", \"B\"]\n",
+    "\n",
+    "df1 = spark.createDataFrame(data = data, schema=columns)\n",
+    "\n",
+    "data = [[3, 2, 4],\n",
+    "        [3, 4, 1]]\n",
+    "\n",
+    "columns = [\"B\", \"C\", \"D\"]\n",
+    "\n",
+    "df2 = spark.createDataFrame(data = data, schema=columns)\n",
+    "\n",
+    "df1.show()\n",
+    "df2.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Debemos agregar a `df` las columnas de `df2` según coincidencia de la columna `\"B\"`, preservando todas las filas de `df` y solo las filas que coinciden de `df2`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Utilicemos el método `join`, especificando que la unión será por coincidencia izquierda externa (que persistan los registros de `df1` y los que coincidan de `df2`)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternativamente, podemos utilizar el método `join`. Con este solo necesitamos dos argumentos, puesto que por defecto se usa el índice para la coincidencia de filas de los `DataFrame`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+---+----+----+\n",
+      "|  B|  A|   C|   D|\n",
+      "+---+---+----+----+\n",
+      "|  2|  1|null|null|\n",
+      "|  4|  3|null|null|\n",
+      "|  3|  1|   4|   1|\n",
+      "|  3|  1|   2|   4|\n",
+      "+---+---+----+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_join = df1.join(df2, on = \"B\", how = 'left')\n",
+    "df_join.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Métodos tipo consulta de SQL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Método `select`"
    ]
   },
   {
@@ -729,9 +1086,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "###### Método `where`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Método `groupBy`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Método `orderBy`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Cargar datos en `pyspark`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para almacenar nuestros datos de manera eficiente y para poder acceder a ellos en el futuro, nos apoyamos en los administradores de bases de datos relacionales (tipo SQL) como SQLite o PostgreSQL."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Referencias\n",
     "\n",
-    "Referencia 1"
+    "SparkBy{Examples}. Spark with Python (PySpark) Tutorial For Beginners. Recuperado el 12 de Agosto de 2022 de: \n",
+    "https://sparkbyexamples.com/pyspark-tutorial/\n",
+    "\n",
+    "Apache PySpark. pyspark.sql.DataFrame. Recuperado el 12 de Agosto de 2022 de: https://spark.apache.org/docs/3.1.1/api/python/reference/api/pyspark.sql.DataFrame.html\n"
    ]
   },
   {
