Submited changes from upstream to Mini.

--- a/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
+++ b/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "hide-input",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/09/12 16:29:18 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "22/09/14 06:52:37 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     },
     {
@@ -151,7 +151,7 @@
       "text/html": [
        "\n",
        "            <div>\n",
-       "                <p><b>SparkSession - in-memory</b></p>\n",
+       "                <p><b>SparkSession - hive</b></p>\n",
        "                \n",
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
@@ -172,10 +172,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7fde759ca670>"
+       "<pyspark.sql.session.SparkSession at 0x7f8dd5356100>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,6 +193,11 @@
     "# Nombramos la instancia\n",
     "spark = spark.appName(\"Instancia_Tutorial_PySpark\")\n",
     "\n",
+    "# Habilitamos la interacción con archivos de bases de datos\n",
+    "spark = spark.enableHiveSupport()\n",
+    "\n",
+    "spark.config()\n",
+    "\n",
     "# Inicializamos la instancia\n",
     "spark = spark.getOrCreate()\n",
     "\n",
@@ -205,7 +210,7 @@
    "source": [
     "El método `master` nos permite definir el contexto de paralelización de los procesos. Veamos algunos parámetros que puede recibir:\n",
     "\n",
-    "* `\"local[n]\"` le indica a la aplicación que debe ejecutarse en el mismo computador, con `n` cantidad de procesos para paralelizar las tareas (`n` = `*` es la máxima cantidad de procesos para el poder de procesamiento disponible); <br><br>\n",
+    "* `\"local[<n>]\"` le indica a la aplicación que debe ejecutarse en el mismo computador, con `n` cantidad de procesos para paralelizar las tareas (`n` = `*` es la máxima cantidad de procesos para el poder de procesamiento disponible); <br><br>\n",
     "\n",
     "* `\"Yarn\"` (u otro nombre de un administrador de _clusters_), le indican a la aplicación que debe ejecutarse en un _cluster_, el cual tendríamos que configurar."
    ]
@@ -270,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +284,7 @@
        "ParallelCollectionRDD[0] at readRDDFromFile at PythonRDD.scala:274"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +339,7 @@
        "PythonRDD[1] at RDD at PythonRDD.scala:53"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +376,7 @@
        " ['Programa_5', 8000, 3505, 'LAN']]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +396,7 @@
        "[9000000, 23807000, 350000, 25905000, 28040000]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +451,7 @@
        "DataFrame[Nombre: string, Descargas: bigint, Lineas_de_codigo: bigint, Region: string]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -545,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +561,7 @@
        " Row(Nombre='Programa_3', Descargas=50, Lineas_de_codigo=7000, Region='LAS')]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +582,7 @@
        " Row(Nombre='Programa_5', Descargas=8000, Lineas_de_codigo=3505, Region='LAN')]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +710,7 @@
        "4  Programa_5       8000              3505    LAN"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,9 +747,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+---------+----------------+------+----------------+\n",
+      "|    Nombre|Descargas|Lineas_de_codigo|Region|DescargasXLineas|\n",
+      "+----------+---------+----------------+------+----------------+\n",
+      "|Programa_1|     2000|            4500|   LAN|         9000000|\n",
+      "|Programa_2|     3401|            7000|   LAS|        23807000|\n",
+      "|Programa_3|       50|            7000|   LAS|          350000|\n",
+      "|Programa_4|     7850|            3300|   USW|        25905000|\n",
+      "|Programa_5|     8000|            3505|   LAN|        28040000|\n",
+      "+----------+---------+----------------+------+----------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from pyspark.sql.functions import col\n",
     "nuevo_df = df.withColumn(\"DescargasXLineas\", col(\"Descargas\") * col(\"Lineas_de_codigo\"))\n",
@@ -782,7 +804,7 @@
     "DataFrame.dropna(how, thresh=0, subset=DataFrame.columns)\n",
     "```\n",
     "\n",
-    "* `how`: <br><br>\n",
+    "* `how`: <br>\n",
     "    * `how = 'any'`: elimina la fila si contiene al menos un faltante.\n",
     "    * `how = 'all'`: elimina la fila si solo contiene faltantes.<br><br>\n",
     "\n",
@@ -800,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -840,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -893,9 +915,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+---+---+---+\n",
+      "|  A|  B|  C|  D|\n",
+      "+---+---+---+---+\n",
+      "|  1|  0|  1|  2|\n",
+      "|  1|  0|  1|  2|\n",
+      "|  1|  0|  1|  2|\n",
+      "+---+---+---+---+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "nuevo_df_numeros = df_numeros.fillna(value={\"A\": 1, \"B\": 0, \"C\": 1, \"D\": 2})\n",
     "nuevo_df_numeros.show()"
@@ -941,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -1038,7 +1075,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Métodos tipo consulta de SQL"
+    "##### Métodos tipo consulta tipo SQL"
    ]
   },
   {
@@ -1108,16 +1145,183 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Trabajarémos con los datos importados anteriormente en la variable `df_covid_19`. La intención es calcular, para cada combinación de los valores de las variables `\"medios_noti_chat\"`, `\"medios_noti_periodicos\"` y `\"medios_noti_tv\"` la cantidad de personas que coincidan."
+    "Trabajarémos con los datos importados anteriormente en la variable `df_covid_19`. La intención es calcular, para cada combinación de los valores de las variables `\"medios_noti_chat\"`, `\"medios_noti_periodicos\"` y `\"medios_noti_tv\"`, la cantidad de registros correspondientes. Reportaremos solo aquellas combinaciones con más de 3000 ocurrencias, ordenadas de mayor a menor."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------+----------------------+--------------+-----+\n",
+      "|medios_noti_chat|medios_noti_periodicos|medios_noti_tv|Count|\n",
+      "+----------------+----------------------+--------------+-----+\n",
+      "|         Siempre|               Siempre|       Siempre|12526|\n",
+      "|         A veces|               A veces|       A veces|10317|\n",
+      "|         A veces|               A veces|  Casi siempre| 9099|\n",
+      "|         Siempre|               A veces|       Siempre| 7980|\n",
+      "|         A veces|                 Nunca|       A veces| 7267|\n",
+      "|    Casi siempre|               A veces|       A veces| 7232|\n",
+      "|    Casi siempre|               A veces|  Casi siempre| 6765|\n",
+      "|         Siempre|               A veces|       A veces| 6578|\n",
+      "|    Casi siempre|          Casi siempre|  Casi siempre| 5811|\n",
+      "|         A veces|          Casi siempre|  Casi siempre| 5610|\n",
+      "|         A veces|                 Nunca|  Casi siempre| 5357|\n",
+      "|         A veces|               A veces|       Siempre| 4860|\n",
+      "|         Siempre|                 Nunca|       Siempre| 4768|\n",
+      "|         Siempre|               A veces|  Casi siempre| 4691|\n",
+      "|    Casi siempre|                 Nunca|       A veces| 4592|\n",
+      "|    Casi siempre|               A veces|       Siempre| 4422|\n",
+      "|         Siempre|                 Nunca|       A veces| 4259|\n",
+      "|         Siempre|          Casi siempre|       Siempre| 4212|\n",
+      "|         A veces|          Casi siempre|       A veces| 4055|\n",
+      "|         A veces|                 Nunca|       Siempre| 3913|\n",
+      "+----------------+----------------------+--------------+-----+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "df_covid_19.printSchema()"
+    "from pyspark.sql.functions import count\n",
+    "\n",
+    "\n",
+    "df_consulta = df_covid_19.groupBy(\"medios_noti_chat\", \"medios_noti_periodicos\", \"medios_noti_tv\")\\\n",
+    "                         .agg(count(\"*\").alias(\"Count\")) \\\n",
+    "                         .where(col(\"Count\") >= 3000) \\\n",
+    "                         .orderBy(col(\"Count\").desc())\n",
+    "df_consulta.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Métodos `createOrReplaceTempView` y `sql`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ejecuta una consulta sobre un `DataFrame` a partir de un `str` que contiene una consulta escrita en SQL."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La especificación del lenguaje SQL reserva algunas palabras a las cuales les atribuye significados particulares. Una consulta puede resultar en ediciones de la base de datos, aunque por lo general solo hacemos consultas de selección."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Algunas de las palabras reservadas para las consultas de selección son:\n",
+    "\n",
+    "* `SELECT`: permite especificar las columnas que deben incluirse en el resultado de la columna. Funciones como `COUNT` agregan columnas caluladas. Pueden seleccionarse todas las columnas posibles con `*` y `AS` permite nombrar columnas con un alias.<br>\n",
+    "\n",
+    "* `FROM`: permite especificar de qué tabla deben extraerse las columnas seleccionadas o calculadas. La tabla puede ser directamente una existente en la base de datos o una construida a partir de varias operaciones.<br>\n",
+    "\n",
+    "    * `JOIN` y `ON`: permiten unir tablas según las mismas reglas de unión que ya conocemos. Puede especificarse el tipo de unión con declaraciones como `LEFT JOIN`, `INNER JOIN` o `OUTER JOIN`, entre otros. Incluimos `ON` para indicar con qué tabla debe hacerse la unión.<br>\n",
+    "\n",
+    "    * `WHERE`: permite filtrar los registros de la tabla construida hasta el momento, según una expresión lógica que aplica para cada registro de las columnas especificadas. Podemos concatenar condiciones con las palabras `OR` y `AND`.<br>\n",
+    "    \n",
+    "* `GROUP BY`: realiza la misma operación de agrupación por combinaciones de columnas que conocemos de `pandas` y `pyspark`.<br>\n",
+    "\n",
+    "* `HAVING`: permite filtrar de manera similar a `WHERE`, luego de haber agrupado y seleccionado las columnas especificadas con `SELECT` y `GROUP BY`.<br>\n",
+    "\n",
+    "* `ORDER BY`: permite ordenar la tabla resultante según sus columnas. Podemos agregar las palabras `ASC` o `DESC` para especificar el orden."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Una consulta de selección puede verse de la siguiente forma:\n",
+    "\n",
+    "```sql\n",
+    "SELECT Columna_1, Columna_2, COUNT(*) AS Conteo\n",
+    "FROM Tabla_1\n",
+    "INNER JOIN Tabla_2 ON Columna_2\n",
+    "WHERE Columna_1 = 'Valor_1'\n",
+    "GROUP BY Columna_1, Columna_2\n",
+    "HAVING Columna_2 != 'Valor_2'\n",
+    "ORDER BY Columna_1 DESC;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aunque `pyspark` es bastante versátil al momento de realizar consultas sobre una base de datos, hay ocasiones en las que resulta beneficioso poder realizar consultas directamente con la sintaxis de SQL. El método `createOrReplaceTempView` hace el `DataFrame` visible al administrador de `SQL`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Presentamos un ejemplo de cómo podemos ralizar la misma consulta sobre el `DataFrame` `df_covid_19`, por medio del método `sql`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------+----------------------+--------------+-----+\n",
+      "|medios_noti_chat|medios_noti_periodicos|medios_noti_tv|Count|\n",
+      "+----------------+----------------------+--------------+-----+\n",
+      "|         Siempre|               Siempre|       Siempre|12526|\n",
+      "|         A veces|               A veces|       A veces|10317|\n",
+      "|         A veces|               A veces|  Casi siempre| 9099|\n",
+      "|         Siempre|               A veces|       Siempre| 7980|\n",
+      "|         A veces|                 Nunca|       A veces| 7267|\n",
+      "|    Casi siempre|               A veces|       A veces| 7232|\n",
+      "|    Casi siempre|               A veces|  Casi siempre| 6765|\n",
+      "|         Siempre|               A veces|       A veces| 6578|\n",
+      "|    Casi siempre|          Casi siempre|  Casi siempre| 5811|\n",
+      "|         A veces|          Casi siempre|  Casi siempre| 5610|\n",
+      "|         A veces|                 Nunca|  Casi siempre| 5357|\n",
+      "|         A veces|               A veces|       Siempre| 4860|\n",
+      "|         Siempre|                 Nunca|       Siempre| 4768|\n",
+      "|         Siempre|               A veces|  Casi siempre| 4691|\n",
+      "|    Casi siempre|                 Nunca|       A veces| 4592|\n",
+      "|    Casi siempre|               A veces|       Siempre| 4422|\n",
+      "|         Siempre|                 Nunca|       A veces| 4259|\n",
+      "|         Siempre|          Casi siempre|       Siempre| 4212|\n",
+      "|         A veces|          Casi siempre|       A veces| 4055|\n",
+      "|         A veces|                 Nunca|       Siempre| 3913|\n",
+      "+----------------+----------------------+--------------+-----+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_covid_19.createOrReplaceTempView(\"df_covid_19\")\n",
+    "\n",
+    "consulta = \\\n",
+    "'''\\\n",
+    "SELECT medios_noti_chat, medios_noti_periodicos, medios_noti_tv, COUNT(*) AS Count\n",
+    "FROM df_covid_19\n",
+    "GROUP BY medios_noti_chat, medios_noti_periodicos, medios_noti_tv\n",
+    "HAVING Count >= 3000\n",
+    "ORDER BY Count DESC;\n",
+    "'''\n",
+    "\n",
+    "df_consulta = spark.sql(consulta)\n",
+    "df_consulta.show()"
    ]
   },
   {
@@ -1131,7 +1335,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para almacenar nuestros datos de manera eficiente y para poder acceder a ellos en el futuro, nos apoyamos en los administradores de bases de datos relacionales (tipo SQL) como SQLite o PostgreSQL."
+    "Para almacenar nuestros datos de manera eficiente y poder acceder a ellos en el futuro, nos apoyamos en los administradores de bases de datos relacionales (tipo SQL). Spark incluye su propio administrador de bases de datos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# spark.sql(\"CREATE DATABASE Test_db\")"
    ]
   },
   {
@@ -1152,9 +1365,9 @@
    "source": [
     "## Créditos\n",
     "\n",
-    "**Autores:** Alejandro Mantilla Redondo\n",
+    "**Autores:** Alejandro Mantilla Redondo, Diego Alejandro Cely Gomez\n",
     "\n",
-    "**Fecha última actualización:** 12/09/2022"
+    "**Fecha última actualización:** 14/09/2022"
    ]
   }
  ],
@@ -1178,5 +1391,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
